# django-postgresql-ws

./: README.md  pyproject.toml
django_postgresql_pure/: base.py  creation.py  features.py  introspection.py  operations.py  schema.py
django_postgresql_ws/: creation.py  operations.py
