[tool.poetry]
name = "django-postgresql-ws"
version = "0.1.0"
description = "Django PostgreSQL backend proxied over WebSockets (for WASM)"
authors = ["dek <dek@substructure.one>"]
readme = "README.md"
packages = [{include = "django_postgresql_ws"}]
license = "BSD-3-Clause"
repository = "https://github.com/SubstructureOne/django-postgresql-ws"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: AsyncIO",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.3"
#pgwasm = "^0.2.1"
pgwasm = {git = "github.com:SubstructureOne/pgwasm.git", rev = "sync"}
asgiref = "^3.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
